<resources>
    <string name="app_name" translatable="false">PDF Reader</string>
    <string name="menu_all_file">All files</string>
    <string name="menu_recent_file">Recent file</string>
    <string name="menu_favorite">Favourite</string>
    <string name="device_does_not_support_printing">Devices not support printing</string>
    <string name="cant_print_password_protected_pdf">Can not print password protected pdf</string>
    <string name="cannot_print_malformed_pdf">Can not print malformed pdf</string>
    <string name="cannot_print_unknown_error">Can not print unknown error</string>
    <string name="cant_share_file">Can\'t share file</string>
    <string name="enter_password">Enter password</string>
    <string name="password_protected">Password protected</string>
    <string name="invalid_password">Invalid password</string>
    <string name="share_this_file_via">Share this file via</string>
    <string name="remove">Remove</string>
    <string name="failed_low_memory">Failed! low memory</string>
    <string name="saving_wait">Saving Please wait…</string>
    <string name="thank_you">Thank you for reviewing</string>
    <string name="search_files">Search files</string>
    <string name="cancel">Cancel</string>
    <string name="all_document">All Documents</string>
    <string name="recent">Recent</string>
    <string name="_10_10">10/10</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="file_name">File Name</string>
    <string name="delete">Delete</string>
    <string name="enter_page_number">Enter page number</string>
    <string name="looking_for_new_pdf_files">Looking for new pdf files!</string>
    <string name="no_recently_files">No recently files!</string>
    <string name="any_files_you_have_recently_worked_with_will_appear_here">Any files you have recently worked with will appear here</string>
    <string name="no_favourite_files">No favourite files!</string>
    <string name="favourite_a_file_to_easily_find_it_here_later">Favourite a file to easily find it here later</string>
    <string name="more_option">More option</string>
    <string name="rename">Rename</string>
    <string name="detail">Details</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="view">View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="complete">Complete</string>
    <string name="clcik_back_again">Please click BACK again to exit</string>
    <string name="ver_enable">Vertical swipe enabled</string>
    <string name="hor_enable">Horizontal swipe enabled</string>
    <string name="error">Error</string>
    <string name="rename_sc">Rename successful</string>
    <string name="deleted_file">Deleted file</string>
    <string name="filter">Filter</string>
    <string name="reading">Reading</string>
    <string name="news">New</string>
    <string name="completed">Completed</string>
    <string name="tip_reading">Tips Reading </string>
    <string name="feedback">Feedback Us</string>
    <string name="policy">Privacy Policy</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="jump">Jump</string>
    <string name="dark">Dark</string>
    <string name="empty">This field is not empty!</string>
    <string name="file_name_">File name:</string>
    <string name="path_">Path:</string>
    <string name="last_modified_">Last modified:</string>
    <string name="size_">Size:</string>
    <string name="jump_to_page">Go to Page</string>
    <string name="go_to">Go to</string>
    <string name="ok">OK</string>
    <string name="enter_rename">Enter rename</string>
    <string name="save">Save</string>
    <string name="remove_ad">Remove Ad</string>
    <string name="upgrade">Upgrade</string>
    <string name="how_was_you_experience">How was your experience?</string>
    <string name="light">Light</string>
    <string name="sort_by_a_z">Sort by A - Z</string>
    <string name="sort_by_z_a">Sort by Z - A</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="pdf_detail_new">PDF Details</string>
    <string name="create_new_pdf_new">Create New PDF</string>
    <string name="convert_to_pdf">Convert to pdf</string>
    <string name="common_issues_new">Common Issues</string>
    <string name="file_selection_new">File Selection</string>
    <string name="are_you_sure_you_want_to_delete_s">Are you sure you want to delete</string>
    <string name="convert">Convert</string>
    <string name="converting">Converting</string>
    <string name="file_searching_not_found">File searching not found</string>
</resources>
