<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llSortChangePopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_sorts"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rd_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp">

        <RadioButton
            android:id="@+id/rd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:button="@drawable/button_check"
            android:drawableLeft="@drawable/ic_sort_nameaz"
            android:padding="5dp"
            android:text="@string/sort_by_a_z"
            android:textSize="@dimen/_12sdp" />

        <RadioButton
            android:id="@+id/rd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/button_check"
            android:drawableLeft="@drawable/ic_sort_nameza"
            android:padding="5dp"
            android:text="@string/sort_by_z_a"
            android:textAlignment="textStart"
            android:textSize="@dimen/_12sdp" />

        <RadioButton
            android:id="@+id/rd3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/button_check"
            android:drawableLeft="@drawable/ic_sort_size"
            android:padding="5dp"
            android:text="@string/sort_by_size"
            android:textAlignment="textStart"
            android:textSize="@dimen/_12sdp" />

        <RadioButton
            android:id="@+id/rd4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/button_check"
            android:drawableLeft="@drawable/ic_sort_date"
            android:padding="5dp"
            android:text="@string/sort_by_date"
            android:textAlignment="textStart"
            android:textSize="@dimen/_12sdp" />
    </RadioGroup>

</LinearLayout>
