<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ms_bg_white_round_corner"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/rename"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_search"
                android:backgroundTint="#F4FCFA">


                <com.kyata.pdfreader.view.widget.CustomRenameEditText
                    android:id="@+id/edt_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/lexend_regular"
                    android:hint="@string/enter_rename"
                    android:paddingStart="@dimen/_8sdp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textColorHint="#A5A5A5"
                    android:textSize="@dimen/_12sdp">

                    <requestFocus />
                </com.kyata.pdfreader.view.widget.CustomRenameEditText>

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bt_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_action"
                    android:backgroundTint="#EBEBEB"
                    android:fontFamily="@font/lexend_regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#F25356"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/bt_save"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_action"
                    android:backgroundTint="#FD3131"
                    android:fontFamily="@font/lexend_regular"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>