<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF272B">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/ic_pdf_new" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PDF"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_24sdp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="Reader"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_24sdp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/setting"
                android:textColor="#404040"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                tools:targetApi="p" />


            <LinearLayout
                android:id="@+id/ll_remove_ads"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_remove_ads" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/remove_ad"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:text="@string/upgrade"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_language"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/language"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_language"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:src="@drawable/ic_pro" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="?attr/selectableItemBackground"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_theme" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/dark_theme"
                    android:textSize="@dimen/_14sdp" />

                <Switch
                    android:id="@+id/sw_night_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:clickable="false"
                    android:focusable="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/about"
                android:textColor="#404040"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                tools:targetApi="p" />

            <LinearLayout
                android:id="@+id/ll_tip_reading"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"

                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_tip_reading" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/tip_reading"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_setting" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_common_issues"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"

                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_common_issuse" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/common_issues_new"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_setting" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"

                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_feedback" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/feedback"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_more_setting" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_policy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_8sdp"

                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:src="@drawable/ic_privacy_policy" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexend_regular"
                    android:text="@string/policy"
                    android:textColor="#404040"
                    android:textSize="@dimen/_14sdp" />


            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_rate"
            android:visibility="gone"    android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/bg_rate_setting"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/lexend_regular"
                    android:gravity="center"
                    android:text="@string/how_was_you_experience"
                    android:textColor="#000"
                    android:textSize="@dimen/_16sdp" />

                <com.ymb.ratingbar_lib.RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    app:drawable_empty="@drawable/ic_rate_setting_inactived"
                    app:drawable_filled="@drawable/ic_rate_setting_actived"
                    app:drawable_half="@drawable/ic_rate_setting_actived"
                    app:drawable_margin="@dimen/_12sdp"
                    app:drawable_size="@dimen/_25sdp"
                    app:is_indicator="false"
                    app:max_count="5"
                    app:rating="5" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>